--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".presentation.view.Dashboard.DashboardActivity" />
+        <activity android:name=".presentation.view.Quiz.QuizActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.view.Dashboard.DashboardActivity" />
-        <activity android:name=".presentation.view.Quiz.QuizActivity" />
+
         <activity android:name=".presentation.view.Login.LoginActivity"></activity>
     </application>
 
