--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-maps:11.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.2'
+    compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.google.android.gms:play-services-auth:11.0.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
